<resources>
    <string name="app_name">AI 번역</string>
    <string name="start_recording">번역 알림 생성</string>
    <string name="stop_recording">번역 알림 삭제</string>
    <string name="user_manual">사용설명서</string>
    <string name="dark_mode">다크모드</string>
    <string name="exit">종료</string>
    <string name="ai_translator">AI 번역기</string>
    <string name="ai_translator_subtitle">2024</string>
    <string name="ai_translator_description">인공지능 AI가 번역해주는 화면</string>
    <string name="translated_image">Translated Image</string>
</resources>
