<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/background_color"
    android:gravity="center">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/ai_translator"
        android:textColor="@color/text_color"
        android:textSize="48sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_rounded" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/ai_translator_subtitle"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_rounded" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/ai_translator_description"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_rounded" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:elevation="4dp"
            android:padding="24dp"
            android:text="@string/start_recording"
            android:textColor="@color/button_text_color"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_rounded" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:elevation="4dp"
            android:padding="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/stop_recording"
            android:textColor="@color/button_text_color"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_rounded" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/userManualButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background_small"
            android:elevation="4dp"
            android:padding="12dp"
            android:layout_marginEnd="16dp"
            android:text="@string/user_manual"
            android:textColor="@color/button_text_color"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_rounded" />

        <Button
            android:id="@+id/darkModeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background_small"
            android:elevation="4dp"
            android:padding="12dp"
            android:text="@string/dark_mode"
            android:textColor="@color/button_text_color"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_rounded" />
    </LinearLayout>

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:elevation="4dp"
        android:padding="12dp"
        android:layout_marginTop="24dp"
        android:text="@string/exit"
        android:textColor="@color/button_text_color"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_rounded" />
</LinearLayout>
